<resources>
	<string name="app_name">Sakura</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="verification_start">Verification request from %s</string>
	<string name="verification_emoji">Verify by comparing emojis</string>
	<string name="verification_illegal_state_title">Illegal state</string>
	<string name="verification_illegal_state_body">Please restart verification from other device.</string>
	<string name="verification_ready">Ready</string>
	<string name="verification_select_method">Select verification method</string>
	<string name="verification_cancel_title">Verification cancelled</string>
	<string name="verification_success_title">Verification complete</string>
	<string name="verification_emoji_match">They match</string>
	<string name="verification_emoji_not_match">They don\'t match</string>
	<string name="verification_emoji_question">Are these emojis the same as shown on the other device?</string>
	<string name="login_title">Welcome to Sakura!</string>
	<string name="login_homeserver_select_body">Let\'s get you started. Where is your account located at?</string>
	<string name="login_homeserver">Homeserver</string>
	<string name="login_with_password">Log in using password</string>
	<string name="error_invalid_homeserver_url">Invalid homeserver URL</string>
	<string name="login_password_title">Logging into %s</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_next">Log in</string>
	<string name="initial_sync">Initial sync ongoing…</string>
	<string name="initial_sync_body">This may take a few minutes if you\'re in a lot of rooms.</string>
	<string name="loading_reply">Loading replied to event…</string>
	<string name="empty_message">Empty message</string>
	<string name="message_edited">(edited)</string>
	<string name="sync_status_running">Connected</string>
	<string name="sync_status_initial">Initial sync ongoing…</string>
	<string name="sync_status_start">Connecting…</string>
	<string name="sync_status_error">Connection error</string>
	<string name="sync_status_timeout">Timed out</string>
	<string name="sync_status_stopped">Syncing stopped</string>
	<string name="action_users">Users</string>
	<string name="action_search">Search</string>
	<string name="action_pins">Pins</string>
	<string name="action_notifications">Notifications</string>
	<string name="action_settings">Settings</string>
	<string name="user_status_online">Online</string>
	<string name="user_status_offline">Offline</string>
	<string name="user_status_unavailable">Unavailable</string>
	<string name="action_edit">Edit</string>
	<string name="action_reply">Reply</string>
	<string name="action_copy">Copy Text</string>
	<string name="action_delete">Delete</string>
	<string name="action_edit_history">Edit History</string>
	<string name="action_profile">Profile</string>
	<string name="action_share">Share</string>
	<string name="action_unread">Mark as Unread</string>
	<string name="action_view_source">View Source</string>
	<string name="action_report">Report</string>
	<string name="action_reactions">Reactions</string>
	<string name="notification_unread">You have %d unread messages</string>
	<string name="notification_new_message">New message</string>
	<string name="notification_channel_other_name">Other notifications</string>
	<string name="notification_channel_other_description">Notifications that don\'t belong to any rooms</string>
	<string name="notification_channel_room_name">Room messages</string>
	<string name="notification_channel_room_description">Messages sent to a room</string>
	<string name="notification_reply_label">Reply</string>
	<string name="notification_attachment_photo">🖼 Photo</string>
	<string name="notification_attachment_video">🎞 Video</string>
	<string name="notification_attachment_audio">🎙 Audio</string>
	<string name="notification_attachment_location">📍 Location</string>
	<string name="notification_attachment">📎 Attachment</string>
	<string name="replying_to">Replying to %s</string>
	<string name="editing_message">Editing message</string>
	<string name="emoji_category_recent">Recently Used</string>
	<string name="emoji_category_people">People</string>
	<string name="emoji_category_nature">Nature</string>
	<string name="emoji_category_food">Food</string>
	<string name="emoji_category_activities">Activities</string>
	<string name="emoji_category_travel">Travel</string>
	<string name="emoji_category_objects">Objects</string>
	<string name="emoji_category_symbols">Symbols</string>
	<string name="emoji_category_flags">Flags</string>
	<string name="typing_indicator_1">%s is typing…</string>
	<string name="typing_indicator_2">%s and %s are typing…</string>
	<string name="typing_indicator_3">%s, %s and %s are typing…</string>
	<string name="typing_indicator_more">%s, %s and %d more people are typing…</string>
	<string name="title_activity_bubble">Bubble Activity</string>
	<string name="error_title">Whoops!</string>
	<string name="error_body">Looks like something has gone wrong</string>
	<string name="error_no_details">An unknown error has occurred.</string>
	<string name="event_failed_to_decrypt">⚠️ Failed to get event contents. Either event is malformed or your device doesn\'t have the keys to decrypt this event.</string>
	<string name="custom_emoji">Custom emoji</string>
	<string name="action_message">Message</string>
	<string name="user_notes">Note</string>
	<string name="user_note_hint">Tap to add a note</string>
	<string name="action_copy_id">Copy ID</string>
	<string name="power_level_creator">Owner</string>
	<string name="power_level_administrator">Admin</string>
	<string name="power_level_moderator">Moderator</string>
	<string name="power_level_user">User</string>
	<string name="user_about_title">About Me</string>
	<string name="unread_messages">New Messages</string>
	<string name="sending">Sending…</string>
	<string name="loading">Attachment loading…</string>
	<string name="notification_rationale_title">Notifications disabled</string>
	<string name="notification_rationale_message">You will not be able to receive notifications for any new messages, mentions, and other important stuff</string>
	<string name="notification_rationale_enable">Turn on notifications</string>
	<string name="notification_rationale_dismiss">Keep notifications disabled</string>
	<string name="notification_rationale_dismiss_forever">Don\'t remind me again</string>
	<string name="emoji_category_account">Your Emoji</string>
	<string name="picker_emoji">Emoji</string>
	<string name="picker_gif">GIFs</string>
	<string name="picker_sticker">Stickers</string>
	<string name="sticker_category_account">Your Stickers</string>
	<string name="gif_search_template">Search %s</string>
	<string name="title_main">Messages</string>
	<string name="title_search">Search</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_settings">Settings</string>
	<string name="message_attachment">Attachment</string>
	<string name="member_state_ban"><![CDATA[<b>%s</b> has banned <b>%s</b> from the room.]]></string>
	<string name="member_state_unban"><![CDATA[<b>%s</b> has unbanned <b>%s</b>.]]></string>
	<string name="member_state_invited"><![CDATA[<b>%s</b> has invited <b>%s</b> to the room.]]></string>
	<string name="member_state_invite_rejected"><![CDATA[<b>%s</b> has rejected their invite.]]></string>
	<string name="member_state_invite_rejected_by"><![CDATA[<b>%s</b> has revoked the invitation of <b>%s</b>.]]></string>
	<string name="member_state_joined"><![CDATA[<b>%s</b> has joined the room.]]></string>
	<string name="member_state_knocked"><![CDATA[<b>%s</b> has knocking.]]></string>
	<string name="member_state_knock_accepted"><![CDATA[<b>%s</b> has accepted the knock of <b>%s</b>.]]></string>
	<string name="member_state_knock_denied"><![CDATA[<b>%s</b> has denied the knock of <b>%s</b>.]]></string>
	<string name="member_state_knock_cancelled"><![CDATA[<b>%s</b> has stopped knocking.]]></string>
	<string name="member_state_left"><![CDATA[<b>%s</b> has left the room.]]></string>
	<string name="member_state_left_by"><![CDATA[<b>%s</b> has kicked <b>%s</b> from the room.]]></string>
	<string name="member_state_change_name"><![CDATA[<b>%s</b> has changed their display name to <b>%s</b>.]]></string>
	<string name="member_state_change_avatar"><![CDATA[<b>%s</b> has changed their avatar.]]></string>
	<string name="member_state_change_name_and_avatar"><![CDATA[<b>%s</b> has changed their display name to <b>%s</b>, and changed their avatar.]]></string>
	<string name="message_deleted">Message deleted</string>
	<string name="room_hint_encrypted">🛡 Send a message</string>
	<string name="room_hint_unencrypted">Send a message</string>
	<string name="room_hint_no_permission">You are not allowed to send messages to this room.</string>
	<string name="room_direct">Direct Messages</string>
	<string name="room_groups">Groups</string>
	<string name="room_home">Home</string>
	<string name="room_name_template_heroes">%s</string>
	<string name="room_name_template_heroes_more">%s (and %d more)</string>
	<string name="room_name_template_empty">Empty room (was %s)</string>
	<string name="preference_user">User settings</string>
	<string name="preference_user_displayname">Display Name</string>
	<string name="preference_user_password">Change password</string>
	<string name="preference_user_signout">Sign out</string>
	<string name="preference_texteditor">Text Editor</string>
	<string name="preference_texteditor_markdown">Enable Markdown</string>
	<string name="preference_texteditor_markdown_on">Your messages will be formatted with Markdown before being sent</string>
	<string name="preference_texteditor_markdown_off">Your messages will be sent as-is, without any changes applied</string>
	<string name="preference_texteditor_typing">Typing Indicator</string>
	<string name="preference_texteditor_typing_off">Other people won\'t know if you\'re typing or not</string>
	<string name="preference_texteditor_typing_on">Other people will know if you\'re typing or not</string>
	<string name="preference_general">General</string>
	<string name="preference_preferences">Preferences</string>
	<string name="preference_developer">Developer Settings</string>
	<string name="preference_developer_crashreporting">Crash Reporting</string>
	<string name="preference_developer_crashreports">Crash Reports</string>
	<string name="preference_developer_crash">Crash App</string>
	<string name="title_crash_reports">Crash Reports</string>
	<string name="crashreport_upload">Upload to homeserver</string>
	<string name="preference_developer_crashreports_clear_all">Clear all reports</string>
	<string name="preference_developer_crashreports_export">Export as ZIP file</string>
	<string name="preference_developer_crashreports_share">Send all crash reports to...</string>
	<string name="view_attachment">View Attachment</string>
	<string name="attachment_viewer_download">Download</string>
	<string name="attachment_viewer_share">Share</string>
	<string name="attachment_viewer_download_success">File \'%s\' downloaded</string>
	<string name="attachment_viewer_download_fail">Failed to download attachment</string>
	<string name="event_create"><![CDATA[<b>%s</b> created the room.]]></string>
	<string name="event_encryption"><![CDATA[<b>%s</b> has enabled encryption for this room.]]></string>
	<string name="event_name"><![CDATA[<b>%s</b> has changed the room\'s name to <b>%s</b>.]]></string>
	<string name="event_topic"><![CDATA[<b>%s</b> has changed the room\'s topic to <b>%s</b>.]]></string>
	<string name="preference_texteditor_gifpicker">GIF Picker</string>
	<string name="preference_texteditor_gifpicker_summary">Select your preferred GIF picker source</string>
	<string name="preference_developer_experimental">Experimental Features</string>
	<string name="preference_developer_msc_browser">MSC Browser</string>
</resources>