<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preference_texteditor">
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="textedit_markdown"
			android:summaryOff="@string/preference_texteditor_markdown_off"
			android:summaryOn="@string/preference_texteditor_markdown_on"
			android:title="@string/preference_texteditor_markdown" />
		<SwitchPreferenceCompat
			android:defaultValue="true"
			android:key="textedit_typing"
			android:summaryOff="@string/preference_texteditor_typing_off"
			android:summaryOn="@string/preference_texteditor_typing_on"
			android:title="@string/preference_texteditor_typing" />
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>