<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preference_developer_crashreporting">
		<Preference
			android:key="developer_crashreports"
			android:title="@string/preference_developer_crashreports" />
		<Preference
			android:key="developer_crash"
			android:title="@string/preference_developer_crash" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preference_developer_experimental">
		<Preference
			android:key="developer_msc_browser"
			android:title="@string/preference_developer_msc_browser" />
		<!--Preference
			android:key="developer_msc_flags"
			android:title="@string/preference_developer_msc_flags" /-->
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>