<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical"
	tools:context=".ui.fragment.login.LoginWithPasswordFragment">

	<TextView
		android:id="@+id/title"
		style="?textAppearanceTitleLarge"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="16dp"
		android:text="@string/login_password_title"
		android:textAlignment="center" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:hint="@string/login_username">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="username"
			android:inputType="text" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginVertical="8dp"
		android:hint="@string/login_password">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="password"
			android:inputType="textPassword" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:text="@string/login_next" />


</LinearLayout>