<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:minHeight="0dp"
	android:orientation="vertical"
	tools:context=".ui.fragment.login.HomeserverSelectFragment">

	<Space
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView"
			style="?textAppearanceDisplaySmall"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="32dp"
			android:text="@string/login_title"
			android:textAlignment="center" />

		<TextView
			style="?textAppearanceBodyLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="32dp"
			android:layout_marginTop="16dp"
			android:text="@string/login_homeserver_select_body"
			android:textAlignment="center" />

	</LinearLayout>

	<Space
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/input_homeserver"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:hint="@string/login_homeserver"
		app:errorEnabled="true">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textUri" />

	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/button_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginBottom="16dp"
		android:enabled="false"
		android:text="@string/login_with_password" />
</LinearLayout>
