<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_nav_graph.xml"
	app:startDestination="@id/nav_empty">

	<fragment
		android:id="@+id/nav_empty"
		android:name="dev.kuylar.sakura.ui.fragment.EmptyFragment"
		tools:layout="@layout/fragment_empty" />
	<fragment
		android:id="@+id/nav_room"
		android:name="dev.kuylar.sakura.ui.fragment.TimelineFragment"
		tools:layout="@layout/fragment_timeline">
		<argument
			android:name="roomId"
			app:argType="string" />
		<argument
			android:name="eventId"
			app:argType="string"
			app:nullable="true" />
	</fragment>
	<fragment
		android:id="@+id/nav_settings"
		android:name="dev.kuylar.sakura.ui.fragment.settings.SettingsFragment"
		android:label="@string/title_settings"
		tools:layout="@layout/fragment_settings" />
	<fragment
		android:id="@+id/nav_notifications"
		android:name="dev.kuylar.sakura.ui.fragment.notification.NotificationFragment"
		android:label="@string/title_notifications"
		tools:layout="@layout/fragment_notification" />
	<fragment
		android:id="@+id/nav_crash_reports"
		android:name="dev.kuylar.sakura.ui.fragment.settings.SettingsCrashReportsFragment"
		android:label="@string/title_crash_reports"
		tools:layout="@layout/fragment_settings_crash_reports" />
</navigation>