<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="?materialCardViewElevatedStyle"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginBottom="-12dp"
	tools:context=".ui.fragment.RoomInfoPanelFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?colorSecondaryContainer"
			android:orientation="vertical"
			android:paddingTop="16dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="8dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<FrameLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<ImageView
						android:layout_width="32dp"
						android:layout_height="32dp"
						android:layout_gravity="center"
						android:importantForAccessibility="no"
						app:srcCompat="@drawable/ic_room" />

					<com.google.android.material.imageview.ShapeableImageView
						android:id="@+id/room_icon"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:scaleType="centerCrop" />
				</FrameLayout>

				<TextView
					android:id="@+id/room_name"
					style="?textAppearanceTitleLarge"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:layout_weight="1"
					tools:text="Room Name" />
			</LinearLayout>

			<TextView
				android:id="@+id/room_topic"
				style="?textAppearanceBodyMedium"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="8dp"
				tools:text="Room topic" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="?android:attr/listDivider" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_search"
					android:textAlignment="center"
					style="?textAppearanceLabelMedium"
					app:drawableTopCompat="@drawable/ic_search" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_pins"
					android:textAlignment="center"
					style="?textAppearanceLabelMedium"
					app:drawableTopCompat="@drawable/ic_pin" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_notifications"
					android:textAlignment="center"
					style="?textAppearanceLabelMedium"
					app:drawableTopCompat="@drawable/ic_notification" />

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_settings"
					android:textAlignment="center"
					style="?textAppearanceLabelMedium"
					app:drawableTopCompat="@drawable/ic_settings" />

			</LinearLayout>
		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginBottom="12dp"
			android:layout_weight="1"
			android:clipToPadding="false"
			android:paddingVertical="12dp"
			tools:listitem="@layout/item_user" />
	</LinearLayout>
</com.google.android.material.card.MaterialCardView>