<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?colorSurfaceContainer"
	tools:context=".ui.fragment.bottomsheet.ProfileBottomSheetFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?colorSurface"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/banner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:maxHeight="150dp"
					android:minHeight="100dp"
					android:scaleType="centerCrop"
					tools:src="@tools:sample/backgrounds/scenic" />

				<com.google.android.material.bottomsheet.BottomSheetDragHandleView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/gradient_top_to_bottom" />

			</FrameLayout>

			<io.getstream.avatarview.AvatarView
				android:id="@+id/avatar"
				android:layout_width="96dp"
				android:layout_height="96dp"
				android:layout_marginHorizontal="16dp"
				android:layout_marginTop="-48dp"
				app:avatarViewBorderColor="?colorSurface"
				app:avatarViewBorderWidth="8dp"
				app:avatarViewIndicatorBorderColor="?colorSurface"
				app:avatarViewIndicatorBorderSizeCriteria="9"
				app:avatarViewIndicatorColor="@color/status_offline"
				app:avatarViewIndicatorEnabled="true"
				app:avatarViewIndicatorPosition="bottomRight"
				app:avatarViewIndicatorSizeCriteria="6"
				app:avatarViewInitialsTextStyle="bold"
				app:avatarViewShape="circle"
				tools:src="@tools:sample/avatars" />

			<TextView
				android:id="@+id/displayname"
				style="?textAppearanceTitleLargeEmphasized"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginTop="8dp"
				android:ellipsize="end"
				android:maxLines="1"
				tools:text="@tools:sample/full_names" />

			<TextView
				android:id="@+id/username"
				style="?textAppearanceLabelLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginTop="4dp"
				android:ellipsize="end"
				android:maxLines="1"
				tools:text="\@username:example.homeserver" />

			<TextView
				android:id="@+id/extras"
				style="?textAppearanceLabelLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginTop="4dp"
				android:ellipsize="end"
				android:maxLines="1"
				android:visibility="gone"
				tools:text="Extra data from other MSCs will be here (pronouns, etc.)"
				tools:visibility="visible" />

			<TextView
				android:id="@+id/status"
				style="?textAppearanceLabelLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginTop="8dp"
				android:ellipsize="end"
				android:maxLines="1"
				android:visibility="gone"
				tools:text="User's custom status"
				tools:visibility="visible" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginVertical="8dp"
				android:background="?android:attr/listDivider" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/button_message"
					style="?textAppearanceLabelMedium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_message"
					android:textAlignment="center"
					app:drawableTopCompat="@drawable/ic_message" />

				<TextView
					android:id="@+id/button_share"
					style="?textAppearanceLabelMedium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_share"
					android:textAlignment="center"
					app:drawableTopCompat="@drawable/ic_share" />

				<TextView
					android:id="@+id/button_copy_id"
					style="?textAppearanceLabelMedium"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="?selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:paddingVertical="12dp"
					android:text="@string/action_copy_id"
					android:textAlignment="center"
					app:drawableTopCompat="@drawable/ic_copy" />
			</LinearLayout>
		</LinearLayout>

		<TextView
			android:id="@+id/user_about_title"
			style="?textAppearanceLabelLargeEmphasized"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/user_about_title"
			android:visibility="gone"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/user_about"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginVertical="4dp"
			android:visibility="gone"
			tools:text="@tools:sample/lorem"
			tools:visibility="visible" />

		<TextView
			android:id="@+id/room_name"
			style="?textAppearanceLabelLargeEmphasized"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="8dp"
			tools:text="Room Name" />

		<com.google.android.material.chip.Chip
			android:id="@+id/roleChip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginVertical="4dp"
			tools:text="Admin" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/note"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:hint="@string/user_notes"
			app:counterEnabled="true"
			app:counterMaxLength="256">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>

</ScrollView>